Update all the things to Fabric